Implementado Acerca de Mi

--- a/Index.html
+++ b/Index.html
@@ -33,10 +33,52 @@
         </div>
       </section>      
 
-      <section id="acerca" class="seccion">
-        <h1>Acerca de mí</h1>
-        <p>Soy alguien increíblemente genial... probablemente más de lo que tú puedas imaginar, ¡eh!</p>
-      </section>
+      <section id="acerca" class="seccion" style="padding: 40px;">
+        <div style="display: flex; align-items: center; gap: 40px; max-width: 1000px; margin: auto;">
+          <div style="flex-shrink: 0;">
+            <img src="images/Realme.JPG" alt="Mi foto" style="height: 380px; width: 380px; border-radius: 50%; object-fit: cover;">
+          </div>
+          <div style="border-left: 2px solid #ccc; padding-left: 30px; display: flex; flex-direction: column; gap: 15px; text-align: left; justify-content: left;">
+            <h2 style="font-size: 32px; margin: 0;">Acerca de Mí</h2>
+            <div>
+              <h4 style="margin: 8px 0;">Perfil Profesional</h4>
+              <p style="margin: 0;">Estudiante de Ingeniería de Software (5to semestre).</p>
+            </div>
+            <div>
+              <h4 style="margin: 8px 0;">Educación</h4>
+              <ul style="margin: 0; padding-left: 20px;">
+                <li>Universidad Católica Boliviana.</li>
+                <li>Escuela Complutense Latinoamericana: <br>“Bioinformática e ingeniería de datos aplicados a ciencias biomédicas”.</li>
+              </ul>
+            </div>
+            <div>
+              <h4 style="margin: 8px 0;">Experiencia</h4>
+              <ul style="margin: 0; padding-left: 20px;">
+                <li>Sistema Solar en TreeGS.</li>
+                <li>Gestor de Eventos.</li>
+                <li>Participante en desarrollo de OrderNow.</li>
+              </ul>
+            </div>
+            <div>
+              <h4 style="margin: 8px 0;">Habilidades</h4>
+              <ul style="margin: 0; padding-left: 20px;">
+                <li>Comprensión básica de inglés.</li>
+                <li>HTML / CSS.</li>
+                <li>C++, C#, Python, JS.</li>
+              </ul>
+            </div>
+            <div>
+              <h4 style="margin: 8px 0;">Hobbies</h4>
+              <ul style="margin: 0; padding-left: 20px;">
+                <li>Videojuegos.</li>
+                <li>Dibujo.</li>
+                <li>Escritura.</li>
+                <li>Inteligencia Artificial.</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </section>            
 
       <section id="blog" class="seccion">
         <h1>Blog</h1>
