--- a/Index.html
+++ b/Index.html
@@ -21,6 +21,9 @@
     </nav>    
 
     <div class="content">
+
+      <!--PAGINA MAIN-->
+
       <section id="main" class="seccion" style="display: flexbox;">
         <div style="display: flex; gap: 10px;">
           <img style="height: 380px; width: 380px; border-radius: 100%;" src="images/Realme.JPG" alt="Mi foto">
@@ -32,6 +35,8 @@
           </div>
         </div>
       </section>      
+
+      <!--PAGINA ACERCA DE MI-->
 
       <section id="acerca" class="seccion" style="padding: 40px;">
         <div style="display: flex; align-items: center; gap: 40px; max-width: 1000px; margin: auto;">
@@ -78,21 +83,73 @@
             </div>
           </div>
         </div>
-      </section>            
+      </section>   
+      
+      <!--PAGINA BLOG-->
 
       <section id="blog" class="seccion">
-        <h1>Blog</h1>
-        <p>Aquí escribiré cosas demasiado interesantes para mentes lentas, así que asegúrate de seguir el ritmo.</p>
+        <ul style="list-style: none; overflow-y: auto; display: flex; gap: 50px;">
+          <li class="blogcard">
+            <img class="cardimage" src="images/1743370677261.jpeg" alt="holo">
+            <h3>
+              "La IA no reemplaza la creatividad humana"
+            </h3>
+            <p class="textcard">
+              AI no puede reemplazar a los artistas. 
+              Aunque herramientas como Stable Diffusion o ChatGPT son útiles, 
+              el arte requiere emoción, visión personal y creatividad auténtica, 
+              cosas que la IA no posee. La imperfección humana es parte de lo que hace que el arte 
+              y la programación sean únicos. La IA es una herramienta poderosa, pero no sustituye
+              la creatividad humana.
+            </p>
+          </li>
+          <li class="blogcard">
+            <img class="cardimage" src="images/1740346744537.jpeg" alt="holo">
+            <h3>
+              "Cómo la IA está transformando el desarrollo de videojuegos"
+            </h3>
+            <p class="textcard">
+              La IA está revolucionando el desarrollo de videojuegos, 
+              permitiendo NPCs más realistas, generación de contenido procedural 
+              y mundos dinámicos. Como estudiante de Ingeniería de Software en 
+              la Universidad Católica Boliviana, me interesa cómo estas tecnologías 
+              optimizan procesos, mejoran la inteligencia enemiga y enriquecen 
+              la experiencia del jugador.
+            </p>
+          </li>
+          <li class="blogcard">
+            <img class="cardimage" src="images/0892815a-861f-4817-98fc-400591330cc3.png" alt="Hola">
+            <h3>
+              "La importancia del UI Design en la experiencia de juego"
+            </h3>
+            <p class="textcard">
+              El diseño de UI en videojuegos es clave para la inmersión y 
+              la experiencia del jugador. Como estudiante de Ingeniería de 
+              Software apasionado por los videojuegos y el arte, 
+              destaco cómo interfaces bien diseñadas, como en 
+              Hollow Knight o Persona 5, no solo son funcionales, 
+              sino que refuerzan la identidad visual del juego. 
+              Un buen equilibrio entre estética y usabilidad es esencial 
+              para lograr una experiencia memorable.
+            </p>
+          </li>
+        </ul>
+
+        <button class="submitb">Ver Mas</button>
       </section>
+
+      <!--PAGINA GALERIA-->
 
       <section id="galeria" class="seccion">
         <h1>Galería de Proyectos</h1>
         <p>Una colección de proyectos que harían que hasta los dioses lloren de envidia.</p>
       </section>
 
+      <!--PAGINA CONTACTO-->
+
       <section id="contacto" class="seccion">
         <h1>Información de Contacto</h1>
-        <p>¿Quieres contactarme? ¡Qué atrevido eres!</p>
+        <p>¿Quieres contactarme?</p>
         <ul>
           <li>Email: <a href="mailto:tuemail@gmail.com">tuemail@gmail.com</a></li>
           <li>LinkedIn: <a href="https://www.linkedin.com/in/tu-perfil" target="_blank">Perfil de LinkedIn</a></li>
@@ -102,10 +159,10 @@
     </div>
 
     <footer>
-      <a href="https://www.linkedin.com/in/tu-perfil" target="_blank">
+      <a href="www.linkedin.com/in/cabrerafloresjeanpaul" target="_blank">
         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linkedin/linkedin-original.svg" alt="LinkedIn"> LinkedIn
       </a>
-      <a href="https://github.com/tu-usuario" target="_blank">
+      <a href="https://github.com/lomandopuntocom" target="_blank">
         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" alt="GitHub"> GitHub
       </a>
       <a href="mailto:tuemail@gmail.com">
