--- a/Index.html
+++ b/Index.html
@@ -142,7 +142,46 @@
 
       <section id="galeria" class="seccion">
         <h1>Galería de Proyectos</h1>
-        <p>Una colección de proyectos que harían que hasta los dioses lloren de envidia.</p>
+        <ul style="list-style: none; overflow-y: auto; display: flex; gap: 50px;">
+          <li class="projcard">
+            <img class="cardimage" src="images/gestor.jpg" alt="holo">
+            <p>feb. 2024 - jun. 2024</p>
+            <h3>
+              Gestor de Eventos
+            </h3>
+            <p class="textcard">
+              Durante mi educación en la Universidad Católica Boliviana, 
+              se nos encargó hacer un gestor de eventos. 
+              Mi papel fue el de hacer la interfaz de todas las paginas del proyecto.
+            </p>
+          </li>
+          <li class="projcard">
+            <img class="cardimage" src="images/miku.jpg" alt="holo">
+            <p>feb. 2024 - jun. 2024</p>
+            <h3>
+              Sistema Solar
+            </h3>
+            <p class="textcard">
+              Durante mi educación en la Universidad Católica Boliviana, 
+              se nos dio la libertad de hacer un proyecto manejando graficos en 3d con TreeGL. 
+              nuestro equipo se decantó por hacer un sistema solar
+            </p>
+          </li>
+          <li class="projcard">
+            <img class="cardimage" src="images/ordernow.png" alt="Hola">
+            <p>feb. 2025 - Actualidad</p>
+            <h3>
+              OrderNow
+            </h3>
+            <p class="textcard">
+              Durante mi educación en la Universidad Católica Boliviana, 
+              nos asignaron por primera vez un proyecto real, 
+              que sea usable para nuestro curriculum. 
+              Una pagina de pedidos de comida.
+            </p>
+          </li>
+        </ul>
+        <button class="submitb">Ver Mas</button>
       </section>
 
       <!--PAGINA CONTACTO-->
@@ -169,8 +208,6 @@
         <img src="https://upload.wikimedia.org/wikipedia/commons/4/4e/Gmail_Icon.png" alt="Gmail"> Gmail
       </a>
     </footer>
-
     <script src="scripts.js"></script>
-
   </body>
 </html>
